--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Posts</h1>
-    <% @posts.each do |post| %>
-      <strong><%= post.name %></strong><br />
-      <%= post.content %>
+    <h1>Articles</h1>
+    <% @posts.each do |articles| %>
+      <strong><%= articles.title %></strong><br />
+      <%= articles.content %>
       <br /><br />
     <% end %>
   </body>
