--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -4,7 +4,7 @@
     <input type="text" name="title" id="title">
   </div>
   <div>
-    <label for="content">My favorite article:</label>
+    <label for="content">this is even better than the last:</label>
     <input type="text" name="content" id="content">
   </div>
   <input name="submit" type="submit" id="submit">
