--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <%= @articles.title %> was deleted!
+    <%= @articles.destroy %> deleted!
   </body>
 </html>
