--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>Articles</h1>
-    <% @posts.each do |articles| %>
+    <% @articles.each do |articles| %>
       <strong><%= articles.title %></strong><br />
       <%= articles.content %>
       <br /><br />
