--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-   <form method = "Article" action="/articles/<%=articles.id%>">
+   <form method = "post" action="/articles/<%=@articles.id%>">
 
     <input id="hidden" type="hidden" name="_method" value="patch">
-    Name<input type = "text" value = "<%= @articles.title%>" name="name">
+    Name<input type = "text" name = "title" value = "<%= @articles.title%>" id="title">
     Contents<input type="text" value="<%= @articles.content%>" name = "content">
     <input type ="submit" value="submit">
 
