--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,4 @@
-<form action="/posts" method="post">
+<form action="/articles" method="post">
   <div>
     <label for="Title">My favorite article:</label>
     <input type="text" name="title" id="title">
